--- a/package.json
+++ b/package.json
@@ -3,10 +3,34 @@
   "version": "1.0.0",
   "description": "custom react hooks",
   "main": "dist/index.js",
-  "types": "lib/typings/index.d.ts",
-  "devDependencies": {
-    "prettier": "^2.8.3"
+  "types": "dist/typings/index.d.ts",
+  "type": "module",
+  "scripts": {
+    "dev": "rollup -c -w",
+    "build": "rollup -c"
   },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-terser": "^0.3.0",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@types/react": "^18.0.26",
+    "prettier": "^2.8.3",
+    "rollup": "^3.10.0",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
+  },
+  "directories": {
+    "dist": "dist"
+  },
+  "files": [
+    "dist"
+  ],
   "repository": "git@github.com:destinytaoer/hooks.git",
   "author": "destiny <1848765519@qq.com>",
   "license": "MIT"
