--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
-  },
-  "directories": {
-    "dist": "dist"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "files": [
     "dist"
