--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "custom react hooks",
   "main": "dist/index.js",
-  "types": "dist/typings/index.d.ts",
+  "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
     "dev": "rollup -c -w",
