--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "exclude": [
-    "dist",
-    "node_modules"
+    "./dist",
+    "node_modules",
+    "./src/**/*.test.ts"
   ],
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "./dist",
     "declaration": true,
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
