--- a/package.json
+++ b/package.json
@@ -2,12 +2,24 @@
   "name": "hooks",
   "description": "custom hook monorepo",
   "private": true,
+  "type": "module",
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.5",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "lerna": "^6.4.1",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-jest": "^29.0.5"
   },
   "repository": "git@github.com:destinytaoer/hooks.git",
   "author": "destiny <1848765519@qq.com>",
