--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "lerna run dev"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
