--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -9,6 +9,9 @@
     "dev": "rollup -c -w",
     "build": "rollup -c"
   },
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
@@ -16,6 +19,7 @@
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-terser": "^0.3.0",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
     "rollup": "^3.10.0",
     "tslib": "^2.4.1",
