--- a/babel.config.json
+++ b/babel.config.json
@@ -1,10 +1,10 @@
-export default {
+{
   "presets": [
     [
       "@babel/preset-env",
       {
         "targets": {
-          "node": true
+          "node": "current"
         }
       }
     ]
